--- a/com-project-clean/src/main/resources/templates/employee/empMainPage.html
+++ b/com-project-clean/src/main/resources/templates/employee/empMainPage.html
@@ -8,6 +8,7 @@
 <body>
 
 	<div th:include="common/header.html"></div>
+	<div th:include="common/taskAside.html"></div>
 	
 	<h3> 직원 메인 페이지 </h3>
 	
