--- a/com-project-clean/src/main/resources/static/css/common/login/loginPage.css
+++ b/com-project-clean/src/main/resources/static/css/common/login/loginPage.css
@@ -56,3 +56,14 @@ input{
     background-color: rgba(104, 228, 255, 1);
     border: 0px;
 }
+
+a{
+	width: 100%;
+    height: 20%;
+    border: 0px solid;
+    background-color: rgba(104, 228, 255, 1);
+    font-size: xx-large;
+    font-style: italic;
+    color: white;
+    text-decoration: none ;
+}
