--- a/com-project-clean/src/main/resources/templates/common/Header.html
+++ b/com-project-clean/src/main/resources/templates/common/Header.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" 
     	href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" >
 	<link 
-		rel="stylesheet" type="text/css" th:href="@{/css/CommonLayout.css}" />
+		rel="stylesheet" type="text/css" th:href="@{/css/common/commonLayout.css}" />
     <script 
     	src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
     	
