--- a/com-project-clean/src/main/resources/static/css/common/login/loginPage.css
+++ b/com-project-clean/src/main/resources/static/css/common/login/loginPage.css
@@ -23,37 +23,32 @@
 .loginbottomnav{
     width: 100%;
     height: 40%;
-    text-align: center;
+    margin-left: 43%;
 }
 
-label{
-    background-color: rgba(104, 228, 255, 1);
-    width: 20%;
-}
 
 input{
-    width: 20%;
     background-color: rgba(217, 217, 217, 1);
     border: 0px;
 
 }
 
 .login {
-    background-color: rgba(104, 228, 255, 1);
     border: 0px;
     width: 10%;
     margin-top: 10%;
+    background-color: white;
 }
 
 .idFind {
     width: 10%;
-    background-color: rgba(104, 228, 255, 1);
+    background-color: white;
     border: 0px;
 }
 
 .pwdFind {
     width: 10%;
-    background-color: rgba(104, 228, 255, 1);
+    background-color: white;
     border: 0px;
 }
 
