--- a/com-project-clean/src/main/resources/templates/common/find/password.html
+++ b/com-project-clean/src/main/resources/templates/common/find/password.html
@@ -5,9 +5,11 @@
 <meta charset="UTF-8">
 <link rel="stylesheet" type="text/css" th:href="@{/css/common/login/idFinder.css}" />
 <script	type="text/javascript" src="https://code.jquery.com/jquery-1.12.4.min.js" ></script>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
 <title>Insert title here</title>
 </head>
 <body>
+
 	
 	<th:block sec:authorize="isAnonymous()">
 		<section class="container-fluid">
@@ -17,10 +19,10 @@
         	</div>
 
         	<div class="loginmidnav col-xl-3">
-            	Id 찾기
+            	비밀번호 찾기
         	</div>
 		
-	        <form action="/common/find/id" method="post" id="idFind">
+	        <form action="/common/find/password" method="post" id="passwordFind">
 	        	<select class=" col-xl-3" name="adminOrEmp">
 					<option value="admin">관리자</option>
 					<option value="employee">직원</option>
@@ -29,8 +31,8 @@
 				<br><br>
 
 	            <div class="loginbottomnav col-xl-3">
-	                <label class="personalcolordiv col-xl-3">이름 : </label>
-	                <input type="text" name="name" class="name" required><br>
+	                <label class="personalcolordiv col-xl-3">아이디 : </label>
+	                <input type="text" name="userId" class="userId" required ><br>
 	            </div>
 
 				<br>	
@@ -41,7 +43,7 @@
 	            </div>
 
 	            <div  class="loginbottomnav col-xl-3">
-	                <button type="submit" class="login col-xl-3">아이디 찾기</button>
+	                <button type=submmit class="login col-xl-3" id="finder" name="btnSubmit">비밀번호 찾기</button>
 	            </div>
 	        </form>
 
@@ -51,29 +53,41 @@
 
 <script>
 
-$(function(){
-
-    $(".name").change(function(){
-        
-        var regExp = /^[가-힣]{2,}$/;
-
-        if(regExp.test($(this).val())){     
-        } else {
-        	alert("한글로 두 자 이상 입력하세요")
-            $(this).val('');
-        };
-    });
+	const finder = document.getElementById("finder");
+	
+	finder.onclick = function(){
+		let text = " 가입시 등록하신 이메일로 초기화된 비밀번호가 발송됩니다. \n 신규 비밀번호는 즉시 변경 부탁드립니다."
+		
+		if(confirm(text) == true){
+			document.getElementById("btnSubmit").submit();
+		} else{
+			location.href="/";
+		}
+	}
+	
+	$(function(){
 
        $(".phone").change(function(){
     	
-    	var phoneCheck = /^(?=.*[0-9]).{10,}$/;
+    	   var phoneCheck = /^(?=.*[0-9]).{10,}$/;
     	
     	if(phoneCheck.test($(this).val())){
     	} else {
     		alert("전화번호는 - 없이 숫자로만 입력 해 주세요..")
     		$(this).val('');
-    	};
-    });
+    	}
+    }); 
+    
+	$(".userId").change(function(){
+		
+		var idCheck = /^(?=.*[a-z])(?=.*[0-9]).{6,}$/;
+	
+		if(idCheck.test($(this).val())){
+		} else {
+			alert("아이디는 소문자와 숫자만 허용됩니다")
+			$(this).val('');
+		}
+	}) 
     
 })
 </script>
