--- a/com-project-clean/src/main/resources/templates/common/Header.html
+++ b/com-project-clean/src/main/resources/templates/common/Header.html
@@ -44,6 +44,7 @@
                     <th:block sec:authorize="isAuthenticated()">			
 						<h3><span sec:authentication="principal.Username"></span></h3>
 					</th:block>
+					<h3><span sec:authentication="principal"></span> </h3>
 
                     <ul class="navbar-nav me-auto mb-3 mb-lg-0">
                         <li class="nav-item">
