--- a/com-project-clean/src/main/resources/templates/common/taskAside.html
+++ b/com-project-clean/src/main/resources/templates/common/taskAside.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
-<html lang="ko">
+<html xmlns:th="https://www.thymeleaf.org"
+	  xmlns:sec="https://www.thymeleaf.org/thymeleaf-extras-springsecurity5">
 <head>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" >
@@ -19,7 +20,7 @@
             <div class="collapse" id="home-collapse">
                 <ul class="btn-toggle-nav list-unstyled fw-normal pb-1 small">
                     <li><a href="#" class="link-dark d-inline-flex text-decoration-none rounded fw-semibold">신청 업무 조회</a></li>
-                    <li><a href="#" class="link-dark d-inline-flex text-decoration-none rounded fw-semibold">체크리스트 작성</a></li>
+                    <li><a href="employee/checklist" class="link-dark d-inline-flex text-decoration-none rounded fw-semibold">체크리스트 작성</a></li>
                     <li><a href="#" class="link-dark d-inline-flex text-decoration-none rounded fw-semibold">보류 체크리스트 조회</a></li>
                     <li><a href="#" class="link-dark d-inline-flex text-decoration-none rounded fw-semibold">완료 체크리스트 조회</a></li>
                   </ul>
