--- a/com-project-clean/src/main/resources/templates/common/Header.html
+++ b/com-project-clean/src/main/resources/templates/common/Header.html
@@ -3,7 +3,7 @@
 	  xmlns:sec="https://www.thymeleaf.org/thymeleaf-extras-springsecurity5">
 <head>
 <meta charset="UTF-8">
-<title>Insert title here</title>
+<title>Project Clean</title>
     <link rel="stylesheet" 
     	href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" >
 	<link 
@@ -40,11 +40,13 @@
                             </ul>
                         </li>
                     </ul>
-                    
-                    <th:block sec:authorize="isAuthenticated()">			
-						<h3><span sec:authentication="principal.Username"></span></h3>
+
+                    <th:block sec:authorize="hasRole('ADMIN')">			
+						<h3><span sec:authentication="principal.adminName"></span></h3>
 					</th:block>
-					<h3><span sec:authentication="principal"></span> </h3>
+                    <th:block sec:authorize="hasRole('EMPLOYEE')">			
+						<h3><span sec:authentication="principal.employeeName"></span></h3>
+					</th:block>
 
                     <ul class="navbar-nav me-auto mb-3 mb-lg-0">
                         <li class="nav-item">
