--- a/com-project-clean/src/main/resources/templates/employee/task/selectMyTask.html
+++ b/com-project-clean/src/main/resources/templates/employee/task/selectMyTask.html
@@ -1,10 +1,26 @@
 <!DOCTYPE html>
-<html>
+<html xmlns:th="http://www.thymleaf.org">
 <head>
 <meta charset="UTF-8">
-<title>Insert title here</title>
+<title>ProjectClean</title>
 </head>
 <body>
 
+	<table align="center" border="1">
+		<tr>
+			<th>예약 번호</th>
+			<th>고객 이름</th>
+			<th>시작 시간</th>
+			<th>종료 시간</th>
+			<th>예상 급여</th>
+		</tr>
+		<tr th:each="resList : ${ reservationList }">
+			<td th:text="${ resList.reservationNo }"></td>
+			<td th:text="${ resList.userName }"></td>
+			<td th:text="${ resList.businessStartTime }"></td>
+			<td th:text="${ resList.businessEndTime }"></td>
+			<td th:text="${ resList.totalPayment }"></td>
+		</tr>
+	</table>
 </body>
 </html>
