--- a/com-project-clean/src/main/resources/templates/admin/adminMainPage.html
+++ b/com-project-clean/src/main/resources/templates/admin/adminMainPage.html
@@ -6,11 +6,16 @@
 <title>Insert title here</title>
 </head>
 <body>
-	<div th:include="common/header.html"></div>
-	<h3>관리자 메인 페이지</h3>
-		<script>
-		console.log("관리자")
-		</script>
-	
+	 <div th:include="common/header.html"></div>
+	 
+	<button onclick="location.href='/admin/select/retireNEmployee'">전체 인원 조회</button>
+	<button onclick="location.href='/admin/hr/regist/employee'">직원 등록(hr)</button>
+	<button onclick="location.href='/admin/boss/regist/employee'">직원 대기중(관리자boss)</button>
+	<button onclick="location.href='/admin/select/blackList'">블랙리스트 조회</button>
+	<button onclick="location.href='/admin/select/vacation'">나의 휴가 조회</button>
+	<button onclick="location.href='/admin/hr/select/Allvacation'">휴가 전체 조회</button>
+	 
+	 <!-- <div th:include="admin/adminAside.html"></div> -->
+	 
 </body>
 </html>
