2022/07/13 09:46 regist Employee by admin who has role humanResource and Boss part complate around three-quarter 인사담당자와 관리자 권한을 가진 관리자가 직원 추가하는 파트 75% 완료

--- a/com-project-clean/src/main/resources/templates/admin/adminMainPage.html
+++ b/com-project-clean/src/main/resources/templates/admin/adminMainPage.html
@@ -10,6 +10,16 @@
 	 
 	<button onclick="location.href='/admin/select/retireNEmployee'">전체 인원 조회</button>
 	<button onclick="location.href='/admin/hr/regist/employee'">직원 등록(hr)</button>
+	
+	<div sec:authorize="hasRole('ROLE_ADMIN_HR')">
+	<th:block sec:authorize="!hasRole('ROLE_ADMIN_BOSS')">
+		<button>(hr)</button>
+	</th:block>
+	
+	<th:block sec:authorize="hasRole('ROLE_ADMIN_BOSS')">
+		<button>(boss)</button>
+	</th:block>
+	</div>
 	<button onclick="location.href='/admin/boss/regist/employee'">직원 대기중(관리자boss)</button>
 	<button onclick="location.href='/admin/select/blackList'">블랙리스트 조회</button>
 	<button onclick="location.href='/admin/select/vacation'">나의 휴가 조회</button>
