--- a/com-project-clean/src/main/resources/templates/admin/humanResource/registEmployee/waitingEmployee.html
+++ b/com-project-clean/src/main/resources/templates/admin/humanResource/registEmployee/waitingEmployee.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
-<html lang="ko">
-<head xmlns:th="http://www.thymeleaf.org">
+<html xmlns:th="https://www.thymeleaf.org"
+	  xmlns:sec="https://www.thymeleaf.org/thymeleaf-extras-springsecurity5">
+	  
+<head>
     <meta charset="UTF-8">
     <title>Document</title>
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
@@ -88,7 +90,7 @@
           <tr class="comfirmBox">
             <td class="tg-amwm">
               <div id="humanResource" name="humanResource"></div>
-            </td>
+            </td> 
             <td class="tg-amwm">
               <div id="boss" name="boss"></div>
             </td>
@@ -121,7 +123,8 @@
 		             <!-- 수정 -->
 		             <!-- 수정 -->
 		             <!-- 수정 -->
-		             <td style="display: none;"><input name="adminNo" th:value="7"></td>
+		             <td style="display: none;"><input name="adminNo"></td>
+		             <td style="display: none;" id="adminNo" sec:authentication="principal.adminNo"></td>
 		             <!-- 수정 -->
 		             <!-- 수정 -->
 		             <!-- 수정 -->
@@ -193,25 +196,47 @@
 	          </table>
 	          <br>
 		          <table class="button">
-		            <tr>
-		              <td><button type="button" id="confirm">승인</button></td>
-		              <td><button type="button" id="return">반려</button></td>
+		          
+		            <tr sec:authorize="hasRole('ROLE_ADMIN_HR')">
+		              <td sec:authorize="!hasRole('ROLE_ADMIN_BOSS')"><button type="button" id="hrConfirm">hr승인</button></td>
+		              <td sec:authorize="!hasRole('ROLE_ADMIN_BOSS')"><button type="button" id="hrReturn">hr반려</button></td>
+		              <td sec:authorize="hasRole('ROLE_ADMIN_BOSS')"><button type="button" id="bossConfirm">boss승인</button></td>
+		              <td sec:authorize="hasRole('ROLE_ADMIN_BOSS')"><button type="button" id="bossReturn">boss반려</button></td>
 		            </tr>
 		      </table>
           </form>
         </div>
       </div>
       <script>
+    	  const adminNo = $("#adminNo").text();
       
-      $("#confirm").click(function(){
+      $("#hrConfirm").click(function(){
+    	  $("input[name=adminNo]").val(adminNo);
 		if(confirm("승인 하시겠습니까?")){
 			$("#confirmForm").submit();
 			}
       });
       
-      $("#return").click(function(){
+      $("#hrReturn").click(function(){
+    	  $("input[name=adminNo]").val(adminNo);
   		if(confirm("반려 하시겠습니까?")){
   			$("#confirmForm").attr("action", "/admin/hr/return/restCommit");
+  			$("#confirmForm").submit();
+			}
+        });
+      
+      $("#bossConfirm").click(function(){
+    	  $("input[name=adminNo]").val(adminNo);
+		if(confirm("승인 하시겠습니까?")){
+  			$("#confirmForm").attr("action", "/admin/boss/confirm/restCommit");
+			$("#confirmForm").submit();
+			}
+      });
+      
+      $("#bossReturn").click(function(){
+    	  $("input[name=adminNo]").val(adminNo);
+  		if(confirm("반려 하시겠습니까?")){
+  			$("#confirmForm").attr("action", "/admin/boss/return/restCommit");
   			$("#confirmForm").submit();
 			}
         });
