--- a/com-project-clean/src/main/resources/templates/employee/task/selectMyTask.html
+++ b/com-project-clean/src/main/resources/templates/employee/task/selectMyTask.html
@@ -56,6 +56,7 @@
 							$table.append($tr);
 							
 							businessStartTime = data[index].businessStartTime;
+							console.log(businessStartTime)
 							
 						};
 					},
