2022/07/13 이시원 재직 관리자 및 퇴사 관리자 조회 기능

--- a/com-project-clean/src/main/resources/templates/admin/adminMainPage.html
+++ b/com-project-clean/src/main/resources/templates/admin/adminMainPage.html
@@ -6,11 +6,15 @@
 <title>Insert title here</title>
 </head>
 <body>
-	<div th:include="common/header.html"></div>
+	<div th:include="common/Header.html"></div>
+	<div th:include="common/hrAside.html"></div>
 	<h3>관리자 메인 페이지</h3>
 		<script>
 		console.log("관리자")
 		</script>
+		
+		<input type="button" onclick="location.href='/admin/hrCard/adminList'">
+		<input value="직원등록" type="button" onclick="location.href='/admin/hrCard/adminRegist'">
 	
 </body>
 </html>
