--- a/com-project-clean/src/main/resources/templates/pay/adminPaySelect.html
+++ b/com-project-clean/src/main/resources/templates/pay/adminPaySelect.html
@@ -1,4 +1,3 @@
-<!-- 
 <!DOCTYPE html>
 <html xmlns:th="https://www.thymeleaf.org"
 	  xmlns:sec="https://www.thymeleaf.org/thymeleaf-extras-springsecurity5">
@@ -17,36 +16,35 @@
 	<div th:include="common/header.html"></div>
 	<div th:include="common/taskAside.html"></div>
 	<section>
-		<table border="1" width="1000px">
+		<table border="1">
 	        <tr>
-	            <th>이름</th>
-	            <th>직급</th>
-	            <th>지급날짜</th>
+	           <th>이름</th> 
+	           <th>직급</th> 
+	           <th>전화번호</th>
+	           <th>지급날짜</th>
 	        </tr>
 	        <tr th:each="pay : ${ adminPayList }">
-	            <td th:text="${ pay.adminName }"></td>
-	            <td th:text="${ pay.adminJob }"></td>
-	            <td th:text="${ pay.payAdminDate }"></td>
+	          <td height="35px" th:text="${ pay.admin.adminName }"></td> 
+	          <td th:text="${ pay.admin.adminJob }"></td> 
+	          <td th:text="${ pay.admin.adminPhone }"></td> 
+	          <td th:text="${ pay.payAdminDate }"></td>
 	        </tr>
     	</table>
-    	
-    	<div th:replace="pay/paging.html"></div>
-
+    	<br>
+    	<div th:replace="pay/adminPayPaging.html"></div>
+		<br>
 		<div class="search-area" align="center">
 			<form id="loginForm" action="/pay/adminPaySelect" method="get" style="display: inline-block">
 					<select th:with="searchCondition = ${selectCriteria.searchCondition}"
 						id="searchCondition" name="searchCondition">
 						<option value="adminName" th:selected="${ searchCondition } == 'adminName'">이름</option>
 						<option value="adminJob" th:selected="${ searchCondition } == 'adminJob'">직급</option>
-						<option value="adminPayDate " th:selected="${ searchCondition } == 'payAdminDate'">지급날짜</option>
 					</select> 
 				<input type="hidden" name="currentPage" value="1">
 				<input type="search" id="name" name="searchValue" th:value="${selectCriteria.searchValue}">
-				<button class="btn btn-bs" type="submit">검색하기</button>
+				<button style="background-color: #9AE8F9" class="btn btn-bs" type="submit">검색하기</button>
 			</form>
-		</div>	
+		</div>	 
     </section>
 </body>
 </html>
--->
-
