2022/07/14 18:37 PFK join to reasonEntity

--- a/com-project-clean/src/main/resources/templates/common/Header.html
+++ b/com-project-clean/src/main/resources/templates/common/Header.html
@@ -31,7 +31,7 @@
                     
                         <li class="nav-item dropdown">
                             <a class="nav-link dropdown-toggle " href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                            <img src="/image/notice.png" class="btn2">
+                            <img src="../image/notice.png" class="btn2">
                             </a>
                             <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
                                 <li><a class="dropdown-item" href="#">알림1</a></li>
@@ -50,10 +50,10 @@
 
                     <ul class="navbar-nav me-auto mb-3 mb-lg-0">
                         <li class="nav-item">
-                            <a class="nav-link" href="#"><img src="/image/mypage.png" class="btn2"> </a>
+                            <a class="nav-link" href="#"><img src="../image/mypage.png" class="btn2"> </a>
                         </li> 
                         <li class="nav-item">
-                            <a class="nav-link" href="/member/logout"><img src="/image/logout.png" class="btn2"> </a>
+                            <a class="nav-link" href="/member/logout"><img src="../image/logout.png" class="btn2"> </a>
                         </li> 
                     </ul>
                 </div>
