--- a/com-project-clean/src/main/resources/templates/pay/surcharge.html
+++ b/com-project-clean/src/main/resources/templates/pay/surcharge.html
@@ -4,50 +4,10 @@
 <head>
 <meta charset="UTF-8">
 <script src="https://code.jquery.com/jquery-3.5.1.min.js" type="text/javascript"></script>
-<script src="https://cdn.jsdelivr.net/npm/sweetalert2@9"></script>
 <link rel="stylesheet" type="text/css" th:href="@{/css/common/pay/surcharge.css}"> 
 <title>Insert title here</title>
 </head>
 <body>
-	<script>
-	
-		const successMessage = "[[${ modifySuccessMessage }]]";
-		if(successMessage){
-			Swal.fire({
-				  title: '수정 성공!!',
-				  text: '부가요금 수정을 성공했습니다~',
-				  imageUrl: 'https://cdn-icons-png.flaticon.com/512/826/826963.png',
-				  imageWidth: 200,
-				  imageHeight: 200,
-				  imageAlt: 'Custom image',
-				})
-		}
-		
-		function checkNull() {
-			
-		    var commission = document.getElementById( 'commission' ).value;
-		    var bonus = document.getElementById( 'monthBonus' ).value;
-		    if ( commission  == '' && bonus  == '' || commission  == 0 && bonus  == 0) {
-		    	Swal.fire({
-					  title: '오류',
-					  text: '둘 다 빈 값을 넣을 수 없습니다!!! ',
-					  imageUrl: 'https://cdn-icons.flaticon.com/png/512/1797/premium/1797305.png?token=exp=1657681119~hmac=08ee3d3332ccc9be984f877cb565cf9e',
-					  imageWidth: 100,
-					  imageHeight: 100,
-					  imageAlt: 'Custom image',
-					})
-			      event.preventDefault();
-		    }
-		    if ( commission == '' && bonus != ''){
-		    	document.querySelector('#commission').value= 0;
-		    }
-		    if ( commission != '' && bonus == ''){
-		    	document.querySelector('#monthBonus').value= 0;
-		    }
-		  }
-		
-		
-	</script>
 	<div th:include="common/header.html"></div>
 	<div th:include="common/taskAside.html"></div>
 	<section>
@@ -66,7 +26,7 @@
 	    </table> 
 	    <br>
 
-	    <form action="/pay/surcharge" name="surchargeForm" method="post" onsubmit="checkNull()">
+	    <form>
 	        <table id="surchargeUpdateTable" border="1">
 	            <tr>
 	                <th>4대보험</th>
@@ -74,9 +34,10 @@
 	                <th>이달의 우수직원 보너스</th>
 	            </tr>
 	            <tr th:each="surcharge : ${ surchargeList }">
-	                <th><input readonly id="insurance" name="surchargeInsurance" type="text" th:value="${surcharge.surchargeInsurance}">%</th>
-	                <th><input id="commission" name="surchargeCommission" type="number"  min="1" max="30" placeholder="수정할 수수료 비율을 입력해주세요(40이하)" autofocus></th>
-	                <th><input id="monthBonus" name="surchargeBonus"  min="100000" max="1000000" type="number" placeholder="수정할 보너스를 입력해주세요(1000000이하)"></th>
+	                <td th:text="|${surcharge.surchargeInsurance}%|"></td>
+	                <td hidden="" th:value="${surcharge.surchargeInsurance}"></td>
+	                <th><input id="commission" type="text" placeholder="수정할 수수료 비율을 입력해주세요(40이하)"  autofocus></th>
+	                <th><input id="monthBonus" type="text" placeholder="수정할 보너스를 입력해주세요(1000000이하)"></th>
 	            </tr>
 	        </table>
 			<br>
@@ -84,4 +45,8 @@
 	    </form> 
 	 </section>
 </body>
+<script>
+	var surchargeUpdateTable = $("#surchargeUpdateTable").val();
+	console.log(surchargeUpdateTable);
+</script>
 </html>
