--- a/com-project-clean/src/main/resources/templates/employee/task/selectMyTask.html
+++ b/com-project-clean/src/main/resources/templates/employee/task/selectMyTask.html
@@ -1,10 +1,12 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymleaf.org">
+<html xmlns:th="http://www.thymleaf.org"
+	  xmlns:sec="https://www.thymeleaf.org/thymeleaf-extras-springsecurity5">
 <head>
 <meta charset="UTF-8">
-<script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
-
+    <link rel="stylesheet"
+    	href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" >
+   	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+    <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
 <title>ProjectClean</title>
 </head>
 <body>
@@ -28,78 +30,70 @@
 	 
 	 
 	<script>
- 		let i = 0;
-		
-			window.onload = function(){
-				$.ajax({
-					url : "selectMyTask",
-					method : "post",
-					success:function(data){
+		var nowtime = new Date();
+		window.onload = function(){
+			$.ajax({
+				url : "selectMyTask",
+				method : "post",
+				success:function(data){
+					
+					const $table = $("#taskInfo tbody");
+					$table.html("");
+					for(var index in data){
+						$tr = $("<tr>");
+						$noTd = $("<td1>").addClass('rn').text(data[index].reservationNo);
+						$nameTd = $("<td>").text(data[index].userName);
+						$startTimeTd = $("<td>").addClass('st').text(data[index].businessStartTime);
+						$endTimeTd = $("<td>").text(data[index].businessEndTime);
+						$paymentTd = $("<td>").text(data[index].totalPayment)
+						$buttonTd = $("<button></button>").addClass('btn').addClass([index]).append("테스트");
 						
-						const $table = $("#taskInfo tbody");
-						$table.html("");
-						for(var index in data){
-							console.log(i)
-							$tr = $("<tr>");
-							$noTd = $("<td1>").addClass('rn').text(data[index].reservationNo);
-							$nameTd = $("<td>").text(data[index].userName);
-							$startTimeTd = $("<td>").addClass('sh').text(data[index].businessStartTime);
-							$endTimeTd = $("<td>").text(data[index].businessEndTime);
-							$paymentTd = $("<td>").text(data[index].totalPayment)
-							$buttonTd = $("<button>제출하기</button>").addClass('btn').addClass([index]);
+						$tr.append($noTd);
+						$tr.append($nameTd);
+						$tr.append($startTimeTd);
+						$tr.append($endTimeTd);
+						$tr.append($paymentTd);
+ 						$tr.append($buttonTd); 
+						$table.append($tr);
+						var startTime = new Date();
+						startTime = data[index].businessStartTime;
+						console.log("업무 시작 시간 : " + startTime)
+						console.log(typeof(startTime))
+					};
+				},
+				error:function(error){
+					console.log(error);
+				}
+			});
+			
+			setTimeout(function() {
+				const buttons = document.querySelectorAll('table#taskInfo tbody tr button');
+				
+				for(let i = 0; i < buttons.length; i++) {
+					
+					nowtime.setMinutes(nowtime.getMinutes() - 30)
+					const nowtime2 = nowtime.toString().substring(15, 21);
+					
+					const button = buttons[i];
+					button.onclick = function() {
+						const timer = button.parentNode.querySelector('.st').innerText.substring(10, 16);
+						if(timer < nowtime2){
 							
-							$tr.append($noTd);
-							$tr.append($nameTd);
-							$tr.append($startTimeTd);
-							$tr.append($endTimeTd);
-							$tr.append($paymentTd);
-	 						$tr.append($buttonTd); 
-							$table.append($tr);
+								const resNo1 = document.querySelectorAll('table#taskInfo tbody tr td1');
+								const resNo2 = resNo1[i];
+								var resNo3 = resNo2.parentNode.querySelector('.rn').innerText;
+							 	location.href="/employee/checkList/start?re="+ resNo3;
 							
-							i++
-							
-			 		 		businessStartTime = data[index].businessStartTime;
-							console.log(businessStartTime)  
+						} else{
+							alert("업무를 시작할 수 없습니다. ")
+						}; 
+					}						
 
-						};
-					},
-					error:function(error){
-						console.log(error);
-					}
-				});
+				}
 				
-				setTimeout(function() {
-					const buttons = document.querySelectorAll('table#taskInfo tbody tr button');
-					
-					for(let i = 0; i < buttons.length; i++) {
-						var nowtime = new Date();
-						nowtime.setMinutes(nowtime.getMinutes() - 30)
-						const nowtime2 = nowtime.toString().substring(15, 21);
-						console.log(nowtime2)
-						
-						const button = buttons[i];
-						button.onclick = function() {
-							const timer = button.parentNode.querySelector('.sh').innerText.substring(10, 16);
-							console.log("업무 시간 : " + timer)
-							if(timer > nowtime2){
-								
-								
-									const resNo1 = document.querySelectorAll('table#taskInfo tbody tr td1');
-									const resNo2 = resNo1[i];
-									var resNo3 = resNo2.parentNode.querySelector('.rn').innerText;
-									console.log(typeof(resNo3))
-								 	location.href="/employee/checklist/insert?re="+ resNo3;
-								
-							} else{
-								alert("업무를 시작할 수 없습니다. ")
-							}; 
-						}						
-	
-					}
-					
-				}, 100)
-				
-		};
+			}, 100)
+			
+	};
    	</script>
    	
 </body>
