--- a/com-project-clean/src/main/resources/templates/common/taskAside.html
+++ b/com-project-clean/src/main/resources/templates/common/taskAside.html
@@ -19,8 +19,8 @@
             </button>
             <div class="collapse" id="home-collapse">
                 <ul class="btn-toggle-nav list-unstyled fw-normal pb-1 small">
-                    <li><a href="/employee/task/selectMyTask" class="link-dark d-inline-flex text-decoration-none rounded fw-semibold">신청 업무 조회</a></li>
-                    <li><a href="#" class="link-dark d-inline-flex text-decoration-none rounded fw-semibold">체크리스트 작성</a></li>
+                    <li><a href="employee/task/selectMyTask" class="link-dark d-inline-flex text-decoration-none rounded fw-semibold">신청 업무 조회</a></li>
+                    <li><a href="employee/checklist/insert" class="link-dark d-inline-flex text-decoration-none rounded fw-semibold">체크리스트 작성</a></li>
                     <li><a href="#" class="link-dark d-inline-flex text-decoration-none rounded fw-semibold">보류 체크리스트 조회</a></li>
                     <li><a href="#" class="link-dark d-inline-flex text-decoration-none rounded fw-semibold">완료 체크리스트 조회</a></li>
                   </ul>
