--- a/com-project-clean/src/main/resources/templates/employee/checklist/insert/checklist.html
+++ b/com-project-clean/src/main/resources/templates/employee/checklist/insert/checklist.html
@@ -251,7 +251,6 @@
 	    
 	    <button type="button" class="submit">제출</button>
 	    </section>
-	    
     <script>
     
     const jbHtml = ""
@@ -260,6 +259,7 @@
 	    	$(document).ready( function() {
 	            const jbHtml = $( 'section' ).html();
 				console.log("호출됐니");
+				console.log(jbHtml)
 	        	$.ajax({
 	            	url: "insert",
 	             	type: "post",
@@ -267,8 +267,9 @@
 	            	 	jbHtml : jbHtml
 	             	},
 	             	success: function(data){
-	             		alert("업무 시작")
-	             		location.href="/employee/task/selectMyTask"
+	            	 	if(data=="1"){
+	            		 	url: "/"
+	            	 	}
 	             	},
 	             	error: function(request, status){
 	                 	alert("네트워크를 확인해주세요.")
