--- a/com-project-clean/src/main/resources/static/css/common/pay/employeePaySelectInfo.css
+++ b/com-project-clean/src/main/resources/static/css/common/pay/employeePaySelectInfo.css
@@ -1,7 +1,6 @@
 
 table{
-	width:90%;
-	margin:0 auto;
+	width:100%;
 	margin-top: 100px;
     font-family: 'MinSans-Medium';
     src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_2201-2@1.0/MinSans-Medium.woff') format('woff');
@@ -15,14 +14,22 @@ table{
  }
  
 
-table th, table tr, table td {
-	border: 1px solid black;
-}
+ table th{
+    background-size: cover;
+    background-repeat: no-repeat;
+    border: 1px;
+ 
+    
 
+ }
  
  table tr:first-of-type p{
      font-size: large;
      
+ }
+ 
+ table th,table tr {
+ 	 border: 1px solid #9AE8F9;
  }
  
 
